fix(sbb-teaser): prevent overlapping chip if including long content (#2450)

--- a/src/components/teaser/teaser.scss
+++ b/src/components/teaser/teaser.scss
@@ -61,6 +61,12 @@
   flex-flow: var(--sbb-teaser-flex-direction) nowrap;
   align-items: var(--sbb-teaser-align-items);
   gap: var(--sbb-teaser-gap);
+  max-width: 100%;
+}
+
+.sbb-teaser__text {
+  overflow: hidden;
+  max-width: 100%;
 }
 
 ::slotted([slot='image']) {
